--- a/page2.html
+++ b/page2.html
@@ -99,7 +99,7 @@
                       <div class="text-xl font-medium">{{result[0].update_at}}</div>
                     </div>
                     <div class="mt-20 text-lg font-medium">
-                      <p>{{result[0].content}}</p>  
+                      <p>{{@result[0].content}}</p>  
                     </div>
                   </div>
               </script>
