--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 
   <!-- 导航 -->
-
   <!-- 顶部预留 -->
   <nav class="w-full flex items-center justify-between flex-wrap bg-orange-400 p-6 top-0 opacity-0">
     <div class="flex items-center flex-shrink-0 text-white mr-6 shadow-sm">
@@ -86,13 +85,14 @@
     <div class="displaymain py-1">
         <!-- 公告区域 -->
         <div class="left card mx-4 shadow-2xl  mt-24">
-          <div class="r-title"><strong>公告</strong><span><a href="index.html">更多 &gt;&gt;</a></span>
+          <div class="r-title"><strong>公告</strong>   <span><a href="index.html">更多 &gt;&gt;</a></span>
           </div>
           <div class="py-1">
             <div class="bg-orange-100 border-l-4 border-orange-500 text-orange-700 p-4 my-4 role="alert">
               <p class="font-bold">网站版本</p>
               <p>目前网站还在测试阶段，仍有一些bug</p>
             </div>
+            <button style="background-color: rgb(0, 255, 136);">123124</button> 
             <div class="bg-orange-100 border-l-4 border-orange-500 text-orange-700 p-4 my-4 role="alert">
               <p class="font-bold">产品展示</p>
               <p>根据监管要求，私募基金产品业绩不在官网披露，最新净值查询请致电公司客服部0755-89811158</p>
