--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <p class="font-bold">网站版本</p>
               <p>目前网站还在测试阶段，仍有一些bug</p>
             </div>
-            <button style="background-color: rgb(0, 255, 136);">wangmuyniubi55555555</button> 
+            <button style="background-color: rgb(0, 255, 136);">王洵最帅</button> 
             <div class="bg-orange-100 border-l-4 border-orange-500 text-orange-700 p-4 my-4 role="alert">
               <p class="font-bold">产品展示</p>
               <p>根据监管要求，私募基金产品业绩不在官网披露，最新净值查询请致电公司客服部0755-89811158</p>
