--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/template-web.js"></script>
   <script src="js/index.js"></script>
   <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/tailwind.css">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/index.css">
 </head>
