--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/template-web.js"></script>
   <script src="js/index.js"></script>
+  <link>
   <link rel="stylesheet" href="css/base.css">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
